@@ -12,11 +12,17 @@ import com.snowdrift.framework.schedule.dto.JobDetails;
 import com.snowdrift.framework.schedule.enums.JobStatusEnum;
 import com.snowdrift.framework.schedule.xxljob.config.XxlJobProperties;
 import com.snowdrift.framework.schedule.xxljob.consts.XxlJobApiConst;
-import com.snowdrift.framework.schedule.xxljob.dto.XxlIJobKey;
+import com.snowdrift.framework.schedule.xxljob.dto.XxlJobKey;
 import com.snowdrift.framework.schedule.xxljob.dto.XxlJobRequest;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 
+import java.net.URI;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
@@ -24,66 +30,76 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 @Slf4j
-public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest, XxlIJobKey> {
+public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest, XxlJobKey> {
 
     private static final String TOKEN_HEADER = "XXL-JOB-ACCESS-TOKEN";
     private static final int SUCCESS_CODE = 200;
     private static final int PAGE_SIZE = 200;
-
     private final XxlJobProperties properties;
-    private final String[] adminUrls;
+    private final List<String> adminUrls;
     private final Map<String, Integer> executorGroupMap = new ConcurrentHashMap<>();
+
+    /**
+     * 登录 Cookie（name=value 格式）
+     */
+    private volatile String loginCookie;
+    private volatile long lastLoginTime;
 
     public XxlJobScheduleServiceImpl(XxlJobProperties properties) {
         this.properties = properties;
         this.adminUrls = parseAdminAddresses(properties.getAdminAddresses());
     }
 
+    // ========== 任务管理 ==========
+
     @Override
-    public void addJob(XxlJobRequest request) {
-        callAdminApi(XxlJobApiConst.JOB_INSERT_PATH, buildJobParam(request, getExecutorGroupId(request.getGroup())));
+    public XxlJobKey addJob(XxlJobRequest request) {
+        JSONObject result = callAdminPostApi(XxlJobApiConst.JOB_INSERT_PATH, buildJobParam(request, getExecutorGroupId(request.getGroup())));
         log.info("XXL-JOB 任务注册成功: name={}, group={}, cron={}",
                 request.getName(), request.getGroup(), request.getCron());
+        return XxlJobKey.newInstance(result.getIntValue("data"));
     }
 
     @Override
-    public void removeJob(XxlIJobKey jobKey) {
-        callAdminApi(XxlJobApiConst.JOB_DELETE_PATH,
+    public void removeJob(XxlJobKey jobKey) {
+        callAdminPostApi(XxlJobApiConst.JOB_DELETE_PATH,
                 Map.of("ids", JSON.toJSONString(List.of(jobKey.getId()))));
         log.info("XXL-JOB 任务删除成功: id={}", jobKey.getId());
     }
 
     @Override
-    public void pauseJob(XxlIJobKey jobKey) {
-        callAdminApi(XxlJobApiConst.JOB_STOP_PATH,
+    public void pauseJob(XxlJobKey jobKey) {
+        callAdminPostApi(XxlJobApiConst.JOB_STOP_PATH,
                 Map.of("ids", JSON.toJSONString(List.of(jobKey.getId()))));
         log.info("XXL-JOB 任务暂停: id={}", jobKey.getId());
     }
 
     @Override
-    public void resumeJob(XxlIJobKey jobKey) {
-        callAdminApi(XxlJobApiConst.JOB_START_PATH,
+    public void resumeJob(XxlJobKey jobKey) {
+        callAdminPostApi(XxlJobApiConst.JOB_START_PATH,
                 Map.of("ids", JSON.toJSONString(List.of(jobKey.getId()))));
         log.info("XXL-JOB 任务恢复: id={}", jobKey.getId());
     }
 
     @Override
-    public void triggerJob(XxlIJobKey jobKey, Map<String, Object> params) {
+    public void triggerJob(XxlJobKey jobKey, Map<String, Object> params) {
         Map<String, String> param = new HashMap<>();
         param.put("id", String.valueOf(jobKey.getId()));
         param.put("executorParam", JSON.toJSONString(params));
         param.put("addressList", StrConst.EMPTY);
-        callAdminApi(XxlJobApiConst.JOB_TRIGGER_PATH, param);
+        callAdminPostApi(XxlJobApiConst.JOB_TRIGGER_PATH, param);
         log.info("XXL-JOB 任务手动触发: id={}", jobKey.getId());
     }
 
+    // ========== 查询 ==========
+
     @Override
-    public boolean exists(XxlIJobKey jobKey) {
+    public boolean exists(XxlJobKey jobKey) {
         return findJobById(jobKey.getId()) != null;
     }
 
     @Override
-    public JobDetails getJob(XxlIJobKey jobKey) {
+    public JobDetails getJob(XxlJobKey jobKey) {
         return convertToJobDetails(findJobById(jobKey.getId()));
     }
 
@@ -97,24 +113,20 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         int groupId = getExecutorGroupId(group);
         List<JobDetails> result = new ArrayList<>();
         int offset = 0;
-
         while (true) {
             Map<String, String> param = new HashMap<>();
             param.put("jobGroup", String.valueOf(groupId));
             param.put("offset", String.valueOf(offset));
             param.put("pagesize", String.valueOf(PAGE_SIZE));
 
-            JSONObject resp = callAdminApi(XxlJobApiConst.JOB_PAGE_PATH, param);
+            JSONObject resp = callAdminPostApi(XxlJobApiConst.JOB_PAGE_PATH, param);
             JSONObject content = resp.getJSONObject("content");
             if (content == null) break;
-
             JSONArray data = content.getJSONArray("data");
             if (data == null || data.isEmpty()) break;
-
             for (int i = 0; i < data.size(); i++) {
                 result.add(convertToJobDetails(data.getJSONObject(i)));
             }
-
             int total = content.getIntValue("total");
             offset += PAGE_SIZE;
             if (offset >= total) break;
@@ -122,7 +134,7 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         return result;
     }
 
-    // ========== 内部方法 ==========
+    // ========== 内部方法：参数构建 ==========
 
     private Map<String, String> buildJobParam(XxlJobRequest request, int groupId) {
         Map<String, String> param = new HashMap<>();
@@ -144,59 +156,162 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         return param;
     }
 
-    private String[] parseAdminAddresses(String adminAddresses) {
-        if (adminAddresses == null || adminAddresses.isBlank()) return new String[0];
+    /**
+     * 解析 Admin 地址列表
+     */
+    private List<String> parseAdminAddresses(String adminAddresses) {
+        if (StringUtils.isBlank(adminAddresses)) return Collections.emptyList();
         return Arrays.stream(adminAddresses.split(StrConst.COMMA))
                 .map(String::trim)
                 .filter(StringUtils::isNotBlank)
-                .toArray(String[]::new);
+                .toList();
     }
 
-    private JSONObject callAdminApi(String path, Map<String, String> params) {
-        if (adminUrls.length == 0) throw new BizException("schedule.xxl.admin.unreachable", new Object[]{"未配置 Admin 地址"});
-        Exception lastException = null;
-        for (String baseUrl : adminUrls) {
-            try { return doPostApi(baseUrl, path, params); }
-            catch (BizException e) { throw e; }
-            catch (Exception e) { log.warn("XXL-JOB Admin[{}] 调用失败，尝试下一个: {}", baseUrl, e.getMessage()); lastException = e; }
+    // ========== 内部方法：登录 ==========
+
+    /**
+     * 确保登录态有效，cookie 过期或不存在时自动登录
+     */
+    private synchronized void ensureLogin() {
+        // 如果登录Cookie存在且未过期，则无需重新登录
+        if (StringUtils.isNotBlank(loginCookie) && System.currentTimeMillis() - lastLoginTime < properties.getLoginTokenTimeout().toMillis()) {
+            return;
         }
-        log.error("XXL-JOB Admin 所有地址均调用失败", lastException);
-        throw new BizException("schedule.xxl.admin.unreachable", new Object[]{lastException != null ? lastException.getMessage() : "unknown"});
+        if (CollectionUtils.isEmpty(adminUrls)) {
+            throw new BizException("schedule.xxl.admin.unreachable", new Object[]{"未配置 Admin 地址"});
+        }
+        Exception lastEx = null;
+        for (String baseUrl : adminUrls) {
+            try {
+                doLogin(baseUrl);
+                return;
+            } catch (BizException e) {
+                throw e;
+            } catch (Exception e) {
+                log.warn("XXL-JOB 登录失败[{}]: {}", baseUrl, e.getMessage());
+                lastEx = e;
+            }
+        }
+        if (lastEx != null) {
+            throw new BizException("schedule.xxl.login.failed", new Object[]{lastEx.getMessage()});
+        }
     }
 
+    /**
+     * 单次登录请求 — 发送凭证并从 Set-Cookie 中提取 token
+     */
+    private void doLogin(String baseUrl) throws Exception {
+        String url = normalizeUrl(baseUrl) + XxlJobApiConst.LOGIN_PATH;
+        String formBody = HttpUtil.buildFormDataBody(Map.of(
+                "userName", properties.getUsername(),
+                "password", properties.getPassword()
+        ));
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(url))
+                .timeout(Duration.ofSeconds(5))
+                .header("Content-Type", HttpUtil.CONTENT_TYPE_FORM)
+                .POST(HttpRequest.BodyPublishers.ofString(formBody, StandardCharsets.UTF_8))
+                .build();
+
+        HttpResponse<String> response = HttpUtil.getHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+
+        // 校验登录响应
+        JSONObject json = JSON.parseObject(response.body());
+        if (json.getIntValue("code", -1) != SUCCESS_CODE) {
+            throw new BizException("schedule.xxl.login.failed", new Object[]{json.getString("msg")});
+        }
+
+        // 从 Set-Cookie 中提取 token
+        String tokenKey = properties.getLoginTokenKey();
+        String cookie = response.headers().allValues("Set-Cookie").stream()
+                .filter(c -> c.startsWith(tokenKey + "="))
+                .findFirst()
+                .map(c -> c.split(";")[0])  // 仅取 "name=value" 部分
+                .orElse(null);
+
+        if (cookie == null) {
+            throw new BizException("schedule.xxl.login.failed", new Object[]{"未找到 Cookie: " + tokenKey});
+        }
+
+        this.loginCookie = cookie;
+        this.lastLoginTime = System.currentTimeMillis();
+        log.info("XXL-JOB 登录成功: {}", baseUrl);
+    }
+
+    // ========== 内部方法：HTTP 调用 ==========
+
+    /**
+     * POST API 调用（支持多地址重试 + 登录过期自动重登）
+     */
+    private JSONObject callAdminPostApi(String path, Map<String, String> params) {
+        ensureLogin();
+        Exception lastEx = null;
+        for (String baseUrl : adminUrls) {
+            try {
+                String body = HttpUtil.postForm(normalizeUrl(baseUrl) + path, params, buildRequestHeaders());
+                return parseApiResponse(body);
+            } catch (BizException e) {
+                throw e;
+            } catch (Exception e) {
+                log.warn("XXL-JOB Admin[{}] 调用失败: {}", baseUrl, e.getMessage());
+                lastEx = e;
+            }
+        }
+        String message = lastEx != null ? lastEx.getMessage() : "unknown";
+        throw new BizException("schedule.xxl.admin.unreachable", new Object[]{message});
+    }
+
+    /**
+     * GET API 调用（支持多地址重试 + 登录过期自动重登）
+     */
     private JSONObject callAdminGetApi(String path, Map<String, String> queryParams) {
-        if (adminUrls.length == 0) throw new BizException("schedule.xxl.admin.unreachable", new Object[]{"未配置 Admin 地址"});
-        Exception lastException = null;
+        ensureLogin();
+        Exception lastEx = null;
         for (String baseUrl : adminUrls) {
-            try { return doGetApi(baseUrl, path, queryParams); }
-            catch (BizException e) { throw e; }
-            catch (Exception e) { log.warn("XXL-JOB Admin[{}] GET 调用失败: {}", baseUrl, e.getMessage()); lastException = e; }
+            try {
+                String url = HttpUtil.buildUrlWithParams(normalizeUrl(baseUrl) + path, queryParams);
+                String body = HttpUtil.get(url, buildRequestHeaders());
+                return parseApiResponse(body);
+            } catch (BizException e) {
+                throw e;
+            } catch (Exception e) {
+                log.warn("XXL-JOB Admin[{}] GET 调用失败: {}", baseUrl, e.getMessage());
+                lastEx = e;
+            }
         }
-        log.error("XXL-JOB Admin 所有地址 GET 调用均失败", lastException);
-        throw new BizException("schedule.xxl.admin.unreachable", new Object[]{lastException != null ? lastException.getMessage() : "unknown"});
+        String message = lastEx != null ? lastEx.getMessage() : "unknown";
+        throw new BizException("schedule.xxl.admin.unreachable", new Object[]{message});
     }
 
-    private JSONObject doPostApi(String baseUrl, String path, Map<String, String> params) {
-        String body = HttpUtil.postForm(normalizeUrl(baseUrl) + path, params, buildAuthHeaders());
-        JSONObject json = JSON.parseObject(body);
-        if (json.getIntValue("code", -1) != SUCCESS_CODE) throw new BizException("schedule.xxl.api.error", new Object[]{json.getString("msg", "unknown")});
-        return json;
-    }
-
-    private JSONObject doGetApi(String baseUrl, String path, Map<String, String> queryParams) {
-        String url = HttpUtil.buildUrlWithParams(normalizeUrl(baseUrl) + path, queryParams);
-        String body = HttpUtil.get(url, buildAuthHeaders());
-        JSONObject json = JSON.parseObject(body);
-        if (json.getIntValue("code", -1) != SUCCESS_CODE) throw new BizException("schedule.xxl.api.error", new Object[]{json.getString("msg", "unknown")});
-        return json;
-    }
-
-    private Map<String, String> buildAuthHeaders() {
+    /**
+     * 构建请求头
+     */
+    private Map<String, String> buildRequestHeaders() {
         Map<String, String> headers = new HashMap<>();
+        // AccessToken 认证（OpenApi，后续兼容）
         String token = properties.getAccessToken();
-        if (StringUtils.isNotBlank(token)) headers.put(TOKEN_HEADER, token);
+        if (StringUtils.isNotBlank(token)) {
+            headers.put(TOKEN_HEADER, token);
+        }
+        // Cookie 认证（SSO 登录）
+        if (loginCookie != null) {
+            headers.put("Cookie", loginCookie);
+        }
         return headers;
     }
+
+    /**
+     * 解析 API 响应
+     */
+    private JSONObject parseApiResponse(String body) {
+        JSONObject json = JSON.parseObject(body);
+        if (json.getIntValue("code", -1) != SUCCESS_CODE) {
+            throw new BizException("schedule.xxl.api.error", new Object[]{json.getString("msg", "unknown")});
+        }
+        return json;
+    }
+
+    // ========== 内部方法：分组 & 任务查找 ==========
 
     private int getExecutorGroupId(String group) {
         String appName = StringUtils.isNotBlank(group) ? group : properties.getAppName();
@@ -205,7 +320,7 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
 
         Map<String, String> params = Map.of("offset", "0", "pagesize", "100", "appname", appName);
         JSONObject result = callAdminGetApi(XxlJobApiConst.GROUP_PAGE_PATH, params);
-        JSONObject content = result.getJSONObject("content");
+        JSONObject content = result.getJSONObject("data");
         if (content != null) {
             JSONArray data = content.getJSONArray("data");
             if (data != null) {
@@ -222,6 +337,9 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         throw new BizException("schedule.xxl.group.not.found", new Object[]{appName});
     }
 
+    /**
+     * 根据任务 ID 查找任务
+     */
     private JSONObject findJobById(int jobId) {
         int groupId = getExecutorGroupId(properties.getAppName());
         int offset = 0;
@@ -231,8 +349,8 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
             param.put("offset", String.valueOf(offset));
             param.put("pagesize", String.valueOf(PAGE_SIZE));
 
-            JSONObject result = callAdminApi(XxlJobApiConst.JOB_PAGE_PATH, param);
-            JSONObject content = result.getJSONObject("content");
+            JSONObject result = callAdminGetApi(XxlJobApiConst.JOB_PAGE_PATH, param);
+            JSONObject content = result.getJSONObject("data");
             if (content == null) break;
             JSONArray data = content.getJSONArray("data");
             if (data == null || data.isEmpty()) break;
@@ -256,7 +374,6 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         details.setDescription(job.getString("jobDesc"));
         details.setStatus(job.getIntValue("triggerStatus") == 1 ? JobStatusEnum.NORMAL : JobStatusEnum.ERROR);
         details.setParams(parseExecutorParam(job.getString("executorParam")));
-
         long lastTime = job.getLongValue("triggerLastTime", 0L);
         details.setLastFireTime(lastTime > 0 ? LocalDateTime.ofInstant(Instant.ofEpochMilli(lastTime), ZoneId.systemDefault()) : null);
         long nextTime = job.getLongValue("triggerNextTime", 0L);
@@ -264,12 +381,23 @@ public class XxlJobScheduleServiceImpl implements IScheduleService<XxlJobRequest
         return details;
     }
 
+    /**
+     * 解析执行器参数
+     */
     private Map<String, Object> parseExecutorParam(String executorParam) {
         if (StringUtils.isBlank(executorParam)) return Collections.emptyMap();
-        try { return JSON.parseObject(executorParam, new TypeReference<>() {}); }
-        catch (Exception e) { log.warn("解析 executorParam 失败: {}", executorParam, e); return Collections.emptyMap(); }
+        try {
+            return JSON.parseObject(executorParam, new TypeReference<>() {
+            });
+        } catch (Exception e) {
+            log.warn("解析 executorParam 失败: {}", executorParam, e);
+            return Collections.emptyMap();
+        }
     }
 
+    /**
+     * 规范化 URL
+     */
     private String normalizeUrl(String url) {
         if (StringUtils.isBlank(url)) return StrConst.EMPTY;
         return url.endsWith(StrConst.SLASH) ? url.substring(0, url.length() - 1) : url;
